--- a/public/css/createAccount.css
+++ b/public/css/createAccount.css
@@ -17,20 +17,25 @@ body {
 }
 h1 {
     font-size: 20px;
+    top: -5%;
     position: relative;
-    top: -20%;
+
     color: #4d4946;
 }
 p {
     text-align: center;
 }
 input {
+    border-radius: 4px;
+    border: 1px solid #4d4946;
     width: 180px;
-    height: 20px;
+    height: 25px;
     margin: 7px;
-    background: linear-gradient(90deg, #ccc, #ccc) left bottom/100% 2px
-            no-repeat,
-        linear-gradient(90deg, #fafafa, #fafafa) left bottom/100% no-repeat;
+    font-size: 10px;
+    padding-left: 5px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+        Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+        sans-serif;
 }
 .btn {
     background-color: #4d4946;
@@ -43,9 +48,10 @@ input {
     font-size: 16px;
     cursor: pointer;
     margin: 20px;
+    border-radius: 4px;
 }
 #login {
-    background-color: rgba(255, 255, 255, 0.65);
+    background-color: rgba(255, 255, 255, 0.9);
     height: 400px;
     width: 300px;
     display: flex;
@@ -64,9 +70,18 @@ input {
 }
 .paragraph {
     position: relative;
-    top: 15%;
 }
 .footer {
     display: flex;
     justify-content: center;
 }
+
+.text-label {
+    font-size: 15px;
+    color: #4d4946;
+}
+
+/* background
+: linear-gradient(90deg, #ccc, #ccc) left bottom/100% 2px
+        no-repeat,
+    linear-gradient(90deg, #fafafa, #fafafa) left bottom/100% no-repeat; */
