--- a/public/css/note.css
+++ b/public/css/note.css
@@ -4,9 +4,7 @@
     border: 0;
     box-sizing: border-box;
     text-decoration: none;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-        Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
-        sans-serif;
+    font-family: system-ui, "Open Sans", "Helvetica Neue", sans-serif;
 }
 html {
     height: 100%;
@@ -18,9 +16,9 @@ body {
     min-height: 100%;
 }
 h1 {
-    font-size: 20px;
+    font-size: 30px;
     position: relative;
-    top: -10%;
+    top: -35%;
     color: #4d4946;
 }
 p {
@@ -30,19 +28,16 @@ input {
     border-radius: 4px;
     border: 1px solid #4d4946;
     width: 180px;
-    height: 25px;
+    height: 20px;
     margin: 7px;
-    font-size: 10px;
     padding-left: 5px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-        Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
-        sans-serif;
+    font-size: 10px;
 }
 
-#login {
-    background-color: rgb(255, 255, 255, 0.9);
-    height: 400px;
-    width: 300px;
+#recados {
+    background-color: rgba(255, 255, 255, 0.65);
+    height: 500px;
+    width: 800px;
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -73,18 +68,12 @@ input {
     font-size: 16px;
     cursor: pointer;
     margin: 20px;
-    border-radius: 4px;
 }
 
 .paragraph {
     position: relative;
+    top: 15%;
 }
-
-.text-label {
-    font-size: 15px;
-    color: #4d4946;
-} 
-
 /* html {
     height: 100%;
 }
@@ -98,7 +87,3 @@ body {
 
 /* A solução moderna é mais simples
 body { min-height: 100vh; } */
-
-/* background: linear-gradient(90deg, #ccc, #ccc) left bottom/100% 2px
-        no-repeat,
-    linear-gradient(90deg, #fafafa, #fafafa) left bottom/100% no-repeat; */
