--- a/public/css/note.css
+++ b/public/css/note.css
@@ -63,7 +63,7 @@ input {
     color: white;
     font-size: 15px;
     cursor: pointer;
-    height: 30px;
+    height: 35px;
     width: 60px;
     border-radius: 4px;
     margin: 7px;
@@ -82,4 +82,18 @@ input {
 table {
     max-width: 100%;
     background-color: rgba(255, 255, 255, 0.8);
+}
+
+button {
+    margin-right: 20px;
+    color: white;
+    background-color: #4d4946;
+    border-radius: 4px;
+    width: 60px;
+    height: 30px;
+}
+
+th {
+    width: 50px;
+    
 }
