--- a/public/css/createAccount.css
+++ b/public/css/createAccount.css
@@ -50,7 +50,7 @@ input {
     margin: 20px;
     border-radius: 4px;
 }
-#login {
+#createAccount {
     background-color: rgba(255, 255, 255, 0.9);
     height: 400px;
     width: 300px;
