--- a/public/css/note.css
+++ b/public/css/note.css
@@ -54,6 +54,10 @@ input {
     width: 300px;
     height: 30px;
 }
+.iptEdit {
+    width: 200px;
+    height: 30px;
+}
 .detail {
     width: 550px;
     height: 30px;
@@ -95,4 +99,9 @@ button {
 
 th {
     width: 50px;
+}
+
+tr {
+    text-align: center;
+    vertical-align: middle;
 }
